# OpenVisus

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  .travis.yml.disabled  CMakeLists.txt  Doxyfile.in  Gemfile  LICENSE  Makefile  OpenVisusConfig.cmake  README.md  _config.yml  azure-pipelines.yml  build.bat  build.sh  build_conda.sh  build_docker.sh  build_osx.sh  config_allfuncs.py  configure.py  deploy.py  environment.yml  find_funcs.py  google_and_slam.midx  index.md  main.cpp  quick_tour.ipynb  setup.py  visus.config  visus.config.bak  visus.idx
CMake/: BundleUtils.py  CMakeLists.txt  Deploy.py  Dockerfile.BuildQt5  FindAPR.cmake  FindApache.cmake  FindFreeImage.cmake  FindLZ4.cmake  FindNumPy.cmake  OpenVisus.py  OpenVisusConfig.cmake  PyDataset.py  PyDeploy.py  PyScriptingNode.py  PyUtils.py  PyViewer.py  VisusMacros.cmake  __init__.py  __main__.py  build.bat  build.manylinux.sh  build.osx.sh  build.sh  build.ubuntu14.sh  build_alpine.sh  build_centos.sh  build_common.sh  build_conda.sh  build_docker.sh  build_manylinux.sh  build_opensuse.sh  build_osx.sh  build_travis.sh  build_ubuntu.sh  build_utils.sh  build_win.bat  common.sh  configure.py  deploy.apple.py  deploy.linux.py  (+22 more)
CMake/FixFindOpenSSL/: FindOpenSSL.cmake
CMake/Internal/: cmake.3.12.0.sh  curl.7.59.0.sh  freeimage.3.160.sh  lz4.1.8.1.2.sh  openssl.1.0.2o.sh  python.3.6.5.sh  swig.3.0.12.sh  tinyxml.2.6.2.sh  zlib.1.2.11.sh
CMake/PostInstall/: CMakeLists.txt  run.py
CMake/os/: common.sh  manylinux.sh  opensuse.sh  osx.sh  ubuntu.sh
CMake/spack/: README.md  package.py
Executable/: CMakeLists.txt
Executable/hdf5_plugin/:   CMakeLists.txt  README.md  main.cpp  openvisus_vol.cpp  openvisus_vol.h  plugin.cpp  plugin.h  test.py  test_openvisus_vol.ipynb
Executable/idx2/: CMakeLists.txt  ReadMe.md  main.cpp
Executable/mod_visus/: CMakeLists.txt  README.atlantis.md  mod_visus.cpp
Executable/python/: CMakeLists.txt  main.cpp  setup.py  visuspy.py
Executable/test_static_linking/: CMakeLists.txt  ReadMe.md  main.cpp
Executable/use_minimal/: CMakeLists.txt  main.cpp
Executable/viewer/: CMakeLists.txt  Info.plist  main.cpp
Executable/visus/: CMakeLists.txt  main.cpp  selftest_idx.cpp  tutorial_1.cpp  tutorial_2.cpp  tutorial_3.cpp  tutorial_4.cpp  tutorial_6.cpp  tutorial_tiling.cpp
ExternalLibs/: CMakeLists.txt  README.txt  download-and-compile.sh
ExternalLibs/FreeImage/: CMakeLists.txt  FreeImage.h  FreeImageIO.h  MapIntrospector.h  Plugin.h  Quantizers.h
ExternalLibs/cryptlite/: CMakeLists.txt
ExternalLibs/curl/: CMakeLists.txt
ExternalLibs/curl-7.86.0/: CHANGES  CMakeLists.txt  MacOSX-Framework  Makefile  Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  buildconf  configure  configure.ac  curl-config.in  libcurl.pc.in  ltmain.sh  maketgz
ExternalLibs/dtl/: CMakeLists.txt
ExternalLibs/libressl/: CMakeLists.txt
ExternalLibs/libressl-3.6.1/: CMakeLists.txt  COPYING  ChangeLog  FindLibreSSL.cmake  Makefile.am  Makefile.am.common  Makefile.in  README.md  README.windows  VERSION  aclocal.m4  cert.pem  cmake_export_symbol.cmake  cmake_uninstall.cmake.in  config  config.sub  configure  configure.ac  libcrypto.pc.in  libssl.pc.in  libtls.pc.in  ltmain.sh  openssl.cnf  openssl.pc.in  tap-driver.sh  x509v3.cnf
ExternalLibs/lz4/: CMakeLists.txt  LICENSE
ExternalLibs/msvc2017_64/: CMakeLists.txt
ExternalLibs/openssl/: CMakeLists.txt
ExternalLibs/python/: CMakeLists.txt
ExternalLibs/tinyxml/: CMakeLists.txt  LICENSE
ExternalLibs/ttmath/: CHANGELOG  COPYRIGHT
ExternalLibs/zfp/: CMakeLists.txt
ExternalLibs/zlib/: CMakeLists.txt
InternalLibs/: CMakeLists.txt
InternalLibs/FreeImage/: CMakeLists.txt  FreeImage.h
InternalLibs/curl/: CMakeLists.txt
InternalLibs/libressl/: CMakeLists.txt  OpenVisus.README.txt
InternalLibs/lz4/: CMakeLists.txt
InternalLibs/openssl/: CMakeLists.txt  URL.txt
InternalLibs/tinyxml/: CMakeLists.txt
InternalLibs/zlib/: CMakeLists.txt
Libs/: CMakeLists.txt  OpenVisusPy.i
Libs/AppKit/: CMakeLists.txt  PyViewer.py
Libs/Dataflow/: CMakeLists.txt
Libs/Db/: CMakeLists.txt  PyDataset.py
Libs/Gui/: CMakeLists.txt  PyScriptingNode.py  PyViewer.py
Libs/GuiNodes/: CMakeLists.txt
Libs/IDX2/: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
Libs/Idx/: CMakeLists.txt
Libs/Kernel/: CMakeLists.txt  PyImage.py  PyUtils.py  __init__.py  __main__.py  setup.py
Libs/Nodes/: CMakeLists.txt
Libs/Swig/: CMakeLists.txt  GuiOpenVisus.i  NonGuiOpenVisus.i  VisusAppKitPy.i  VisusDataflowPy.i  VisusDbPy.i  VisusGuiNodesPy.i  VisusGuiPy.i  VisusIdxPy.i  VisusKernelPy.i  VisusNodesPy.i  VisusPy.i  VisusSwigCommon.i
Libs/XIdx/: CMakeLists.txt  Xidx.dtd
Libs/slamcpp/: slam.cpp  slam.h
Libs/swig/: CMakeLists.txt  PyMultipleDataset.h  PyViewer.py  VisusAppKitPy.i  VisusDataflowPy.i  VisusDbPy.i  VisusGuiNodesPy.i  VisusGuiPy.i  VisusIdxPy.i  VisusKernelPy.i  VisusNodesPy.i  VisusPy.common  VisusPy.i  VisusXIdx.i  VisusXIdxPy.i  __init__.py  __main__.py  convert.py  copy_blocks.py  dashboards.py  dataset.py  gui.py  image_utils.py  pyquery.py  s3.py  scripting_node.py  setup.py  utils.py  viewer.py
Samples/: CMakeLists.txt
Samples/convert/: README.md  convert.sh  convert.xml  create_huge.py  google_earth.py  interleave.sh  modvisus_to_amazon.txt  modvisus_to_azure.txt
Samples/cpp/: filters.cpp  fullres.cpp  read_idx.cpp  read_idx_levels.cpp  tiling.cpp  write_idx.cpp
Samples/dashboards/: ReadMe.md  canvas.py  dashboard_single_slice.ipynb  dashboards_multiple_slices.ipynb  example.ipynb  example.py  run.py  widgets.py
Samples/jupyter/: Agricolture.ipynb  Climate.ipynb  Create HTTP Accessible Idx File.ipynb  Filters.ipynb  OpenVisus-Blank.ipynb  OpenVisus-Tutorial.ipynb  ReadAndView.ipynb  SpeedTest.ipynb  TALASS.ipynb  TestIdxBlockCompression.xlsx  VisibleMale.ipynb  arecibo.ipynb  dataset_slice.ipynb  demo-slice-foam-dataset-from-cloud-sources.ipynb  demo-slice-foam-dataset-from-cloud.ipynb  nasa_conversion_example.ipynb  neon.ipynb  netcdf-tutorial1.ipynb  netcdf-tutorial2.ipynb  ongoing.ipynb  (+8 more)
(+6914 files in other folders)
